# truxelo-snippets

./: LICENSE  README.md
next/invoices/: README.md  biome.json  package-lock.json  package.json
next/invoices/app/: actions.tsx  layout.tsx  navigation.tsx  page.tsx
next/invoices/app/cards/: invoice.tsx  transport-order.tsx
next/invoices/components/ui/: button.tsx  checkbox.tsx  scroll-area.tsx  separator.tsx
next/invoices/lib/models/: index.ts  invoice.ts  transport-order.ts
next/invoices/lib/stores/: index.ts  invoices.ts  transport-orders.ts
python/bridge/: Makefile  README.md  pyproject.toml
python/bridge/data/: db.sqlite
python/bridge/src/bridge/: config.py  main.py
python/bridge/src/bridge/cli/: app.py
python/bridge/src/bridge/cli/commands/: database.py  users.py
python/bridge/src/bridge/database/: core.py
python/bridge/src/bridge/database/migrations/: env.py
python/bridge/src/bridge/database/migrations/versions/: 20260101_55e0e2a96507.py
python/bridge/src/bridge/database/storages/: user.py
python/bridge/src/bridge/database/tables/: users.py
python/bridge/src/bridge/domain/users/models/: user.py
python/bridge/src/bridge/domain/users/services/: create_user.py  delete_user.py  fetch_all_users.py  update_user.py
python/bridge/src/bridge/domain/users/storages/: in_memory.py  interface.py
python/bridge/tests/: conftest.py  test_cli_commands.py  test_config.py  test_database_core.py  test_database_storage_user.py  test_domain_user_model.py  test_domain_user_service_create.py  test_domain_user_service_delete.py  test_domain_user_service_fetch_all.py  test_domain_user_service_update.py  test_domain_user_storage_in_memory.py
python/invoices/: .envrc  .gitignore  Makefile  README.md  pyproject.toml
python/invoices/data/: db.sqlite
python/invoices/tests/: conftest.py  test_get_invoices.py
(+28 files in other folders)
