[project]
name = "bridge"
version = "0.1.0"
description = "User data synchronisation"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.17.2",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "sqlalchemy[asyncio]>=2.0",
  "click>=8.1.0",
  "uuid6>=2025.0.1",
  "tabulate>=0.9.0",
  "requests>=2.32.5",
]

[project.scripts]
bridge = "bridge.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[dependency-groups]
utils = [
  "ipython~=8.27",
  "python-lsp-server~=1.14",
  "pyright~=1.1",
]
lint = [
  "black~=24.8",
  "flake8-pyproject~=1.2",
  "flake8~=7.1",
  "isort~=5.13",
  "mypy~=1.11",
  "pygrep~=0.3",
  "pylint~=4.0",
]
tests = [
  "factory-boy~=3.3",
  "faker~=30.0",
  "freezegun~=1.5",
  "pytest-asyncio~=0.26",
  "pytest-cov~=5.0",
  "pytest~=8.3",
]

[tool.black]
line-length = 99
target-version = ['py313']

[tool.isort]
force_single_line = true
line_length = 99
profile = "black"
known_third_party = ["alembic"]

[tool.flake8]
max-line-length = 99

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.pylint.'BASIC']
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
good-names = ["i", "j", "k"]
const-rgx = "(([a-z_]+)|([A-Z_]+))$"
module-rgx = "([a-z0-9_]+)$"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0105",
    "C0114",
    "R0801",
    "R0902",
    "R0903",
    "R0911",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R0917",
    "W0621",
    "W2301",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B610"]

[tool.pytest.ini_options]
norecursedirs = ["migrations"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
